k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sweb-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sweb-postgres
  template:
    metadata:
      labels:
        app: sweb-postgres
    spec:
      containers:
      - name: sweb-postgres
        image: postgres:15
        ports:
        - containerPort: 5432
