k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweb-backend-service
spec:
  selector:
    app: sweb-backend
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
