k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweb-frontend-service
spec:
  selector:
    app: sweb-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
