k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweb-postgres-service
spec:
  selector:
    app: sweb-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
